<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#72EDB4FC"
    tools:context=".RegistroLoginActivitys.REGISTROSignIn1">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="left"
            android:text="@string/Lo_primero"
            android:textSize="50sp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="left"
            android:text="@string/Vamos_a_conocernos"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="left"
            android:text="@string/correo_electronico"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/TxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email"
            android:fontFamily="@font/quicksand_bold"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="left"
            android:text="@string/contrasenna"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtEmail" />

        <EditText
            android:id="@+id/TxtPwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="0.8"
            android:fontFamily="@font/quicksand_bold"
            android:hint="Contraseña"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.148"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="left"
            android:text="@string/repita_contrasenna"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtPwd1" />

        <EditText
            android:id="@+id/TxtPwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:hint="Repita la contraseña"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.148"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonVolver"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/quicksand_bold"
                android:onClick="backToLogin"
                android:text="@string/volver"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/TxtPwd2" />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                />

            <Button
                android:id="@+id/botonSiguiente"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/siguiente"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/TxtPwd2" />
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>