<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#72EDB4FC"
    tools:context=".RegistroLoginActivitys.REGISTROSignIn2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="52dp"
                android:layout_weight="1.5"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/Lo_primero"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="0.6"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="left"
                android:text="@string/Vamos_a_conocernos"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/nombre"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/TxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.8"
                android:fontFamily="@font/quicksand_bold"
                android:hint="Nombre"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/apellidos"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/TxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.8"
                android:fontFamily="@font/quicksand_bold"
                android:hint="Apellidos"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/nombre_de_usuario"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/TxtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.8"
                android:fontFamily="@font/quicksand_bold"
                android:hint="Username"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/fecha_nacimiento"
                android:textSize="20sp" />

            <CalendarView
                android:id="@+id/TxtFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.8"
                android:fontFamily="@font/quicksand_bold"
                android:hint="00/00/0000"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/botonVolver2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_bold"
                    android:onClick="Sign1"
                    android:text="@string/volver"
                    app:cornerRadius="20dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <Button
                    android:id="@+id/botonSiguiente"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_bold"
                    android:onClick="Sign3"
                    android:text="@string/siguiente"
                    app:cornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/TxtPwd2" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>