<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#72EDB4FC"
    tools:context=".RegistroLoginActivitys.INICIOLoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70px"
                android:layout_weight="1.5"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/titulo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/correo_electronico"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/TxtEmailLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="left"
                android:text="@string/contrasenna"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/TxtPwdLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/quicksand_bold"
                android:hint="Contraseña"
                android:inputType="textPassword"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="28dp"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/iniciar_sesion"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TxtPwdLogIn" />

            <TextView
                android:id="@+id/txtRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/quicksand_medium"
                android:minHeight="48dp"
                android:onClick="SignIn"
                android:text="@string/registrate"
                android:textColor="#0046FE"
                app:layout_constraintStart_toStartOf="@+id/btnInicioSesion"
                app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/GoogleAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="#D3CFCF"
                android:drawableLeft="@drawable/google"
                android:fontFamily="@font/quicksand_medium"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtRegistrarse"
                app:layout_constraintTop_toBottomOf="@+id/txtRegistrarse"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>