<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#72EDB4FC"
    tools:context=".RegistroLoginActivitys.REGISTROSignIn3"
    android:scrollbars="vertical">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="left"
            android:text="@string/Edita_tu_perfil"
            android:textSize="50sp"
            />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="left"
            android:text="@string/quien_eres"
            android:textSize="24sp"
             />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.8"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/no_imagen"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:text="@string/descripcion"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/TxtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/cuadro_descripcion"
            android:fontFamily="@font/quicksand_bold"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
             />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:text="@string/selecciona_juegos"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Spinner

                android:id="@+id/gamesList1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/quicksand_bold"
                tools:ignore="SpeakableTextPresentCheck" />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                />

            <Spinner
                android:id="@+id/gamesList2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/gamesList3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/quicksand_bold"
                tools:ignore="SpeakableTextPresentCheck" />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                />

            <Spinner
                android:id="@+id/gamesList4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                app:strokeColor="@color/purple_500"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonVolver3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/quicksand_bold"
                android:onClick="Sign2"
                android:text="@string/volver"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/TxtPwd2" />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                />

            <Button
                android:id="@+id/botonDisfruta"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/disfruta"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/TxtPwd2" />

        </LinearLayout>


    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>